--- a/.hintrc
+++ b/.hintrc
@@ -9,6 +9,12 @@
         "button-name": "off",
         "link-name": "off"
       }
+    ],
+    "axe/aria": [
+      "default",
+      {
+        "aria-valid-attr-value": "off"
+      }
     ]
   }
 }
